# pop-print

./: .gitignore  Cargo.toml  LICENSE  README.md  pop-print.service  requirements.txt
app/: printrest.py  startapp.sh
distrib/: pop-print.spec
pyenv/: pyvenv.cfg
src/: auth.rs  login.html  main.rs  print.rs  print_upload.html
