[package]
name = "pop-print"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-lc-rs = "1.15.4"
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
dotenv = { version = "0.15.0", optional = true }
ipp = { git = "https://github.com/ancwrd1/ipp.rs.git", version = "5.5.0" }
reqwest = { version = "0.13.2", features = ["http2", "rustls", "json"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[features]
dotenv = ["dep:dotenv"]
